# fluidization-AE

./: .gitignore  CITATION.cff  README.md  anomalies.ipynb  calibracao.py  distributor_dp.py  helperFuncs.py  modeling.ipynb  particles.ipynb  pyproject.toml  requirements.txt  train_model.py
GUI/: GUI.py  README.md  converte.py  requirements.txt
data/: converte.py  particles.xlsx  teste.csv
data/ANOMALIAS/: variacoes-aleatorias.csv  variacoes-vazao.csv
data/CALIBRACAO/: 04hz.csv  10hz.csv  11hz.csv  FT101.csv  MEDIAS.xlsx  PT105.csv  curvas.py
data/PAINCO/: P00.csv  P01.csv  P02.csv  P03.csv  P04.csv  P05.csv  P06.csv  P07.csv  P08.csv  P09.csv  P10.csv  P11.csv  P12.csv  P13.csv  P14.csv  P15.csv  P16.csv  P17.csv  P18.csv  P19.csv
data/VAZIO/: P00.csv  P02.csv  P04.csv  P05.csv  P08.csv  P10.csv  P14.csv  P15.csv  P18.csv  P20.csv  P24.csv  P25.csv  P28.csv  P30.csv  P35.csv  P40.csv
data/VIDRO-B2/: P00.csv  P01.csv  P02.csv  P03.csv  P04.csv  P05.csv  P06.csv  P07.csv  P08.csv  P09.csv  P10.csv  P11.csv  P12.csv  P13.csv  P14.csv  P15.csv  P16.csv  P17.csv  P18.csv  P19.csv  P20.csv  P24.csv  P28.csv  P30.csv
data/VIDRO-B3/: P00.csv  P02.csv  P04.csv  P06.csv  P08.csv  P10.csv  P11.csv  P12.csv  P13.csv  P14.csv  P15.csv  P16.csv  P17.csv  P18.csv  P19.csv  P20.csv  P21.csv  P22.csv  P23.csv  P24.csv  P26.csv  P27.csv  P28.csv  P29.csv  P30.csv  P31.csv  P32.csv  P34.csv  P36.csv  P38.csv  P40.csv  P42.csv  P43.csv
models/: best_model.keras  summary.txt
notebooks/: anomalies.ipynb  evaluate_model.ipynb  particles.ipynb
utils/: helper.py
(+57 files in other folders)
