[project]
name = "fluidization-ae"
version = "0.1.0"
description = "Detecção de anomalias em leitos fluidizados utilizando autoencoders lstm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib-inline>=0.1.7",
    "matplotlib>=3.9.2",
    "nidaqmx>=1.0.1",
    "numpy<2",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "setuptools>=75.1.0",
    "tensorflow>=2.17.0",
    "tqdm>=4.66.5",
]
